<resources>

    <string name="app_name">LoopBack</string>
    
    <string name="step1">Step 1</string>
    <string name="step2">Step 2</string>
    <string name="step3">Step 3</string>
    <string name="step4">Step 4</string>
    
    <string name="circle1">❶</string>
    <string name="circle2">❷</string>
    <string name="circle3">❸</string>
    <string name="circle4">❹</string>
    
    <string name="welcome">Welcome</string>
    <string name="welcome_intro1">Each tab in this app will guide you through what you need to get started using the LoopBack Node for your Mobile App.</string>
    <string name="welcome_intro2">Just follow the tips and uncomment the code for each feature.</string>
    
    <string name="start">Start with the next Tab</string>
    
    <string name="step1_title">Getting your CRUD together</string>
    <string name="step2_title">Become a Model Citizen</string>
    <string name="step3_title">Find and Filter</string>
    <string name="step4_title">Crush Server Latency</string>
    
    <string name="Create">Create</string>
    <string name="Refresh">Refresh</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    
    <string name="custom_method_1">Lowest Audible Range</string>
    <string name="custom_method_2">Highest # of Rounds</string>
    
    <string name="message_success_init">Press \'Refresh\' to load the local ListView.</string>
    <string name="message_success_create">Congratulations, you created a model instance on the server. Press \'Refresh\' to update the local ListView.</string>
    <string name="message_success_update">Congratulations, you updated a model instance on the server. Press \'Refresh\' to update the local ListView.</string>
    <string name="message_success_delete">Congratulations, you deleted a model instance on the server. Press \'Refresh\' to update the local ListView.</string>
    <string name="message_error_connection">It looks like your server isn\'t running. From the sls-sample-app folder start the server with\n\'slc run app.js\'\nand try again.</string>
    <string name="message_failure_find">Couldn\'t find model.</string>
</resources>
