<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical" >    
    
    <TextView 
        android:text="@string/welcome"
        android:textSize="26sp"
        android:textColor="#15552c"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView 
        android:text="@string/welcome_intro1"
        android:textSize="15sp"
        android:textColor="#15552c"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView 
        android:text="@string/welcome_intro2"
        android:textSize="15sp"
        android:textColor="#15552c"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="12dp"
	    android:orientation="horizontal" >
	    <TextView 
	        android:text="@string/circle1"
	        android:textSize="24sp"
	        android:textColor="#15552c"
	        android:layout_marginRight="8dp"
	        android:layout_gravity="center_vertical"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        />
	    <TextView 
            android:text="@string/step1_title"
            android:textSize="18sp"
            android:textColor="#15552c"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal" >
        <TextView 
            android:text="@string/circle2"
            android:textSize="24sp"
            android:textColor="#15552c"
            android:layout_marginRight="8dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView 
            android:text="@string/step2_title"
            android:textSize="18sp"
            android:textColor="#15552c"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal" >
        <TextView 
            android:text="@string/circle3"
            android:textSize="24sp"
            android:textColor="#15552c"
            android:layout_marginRight="8dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView 
            android:text="@string/step3_title"
            android:textSize="18sp"
            android:textColor="#15552c"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal" >
        <TextView 
            android:text="@string/circle4"
            android:textSize="24sp"
            android:textColor="#15552c"
            android:layout_marginRight="8dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView 
            android:text="@string/step4_title"
            android:textSize="18sp"
            android:textColor="#15552c"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    
	<Button
	    android:id="@+id/start"
	    android:text="@string/start"
	    android:layout_marginTop="15dp"
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
	<ImageView 
	    android:src="@drawable/logo"
	    android:contentDescription="@null"
	    android:layout_gravity="right"
	    android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</LinearLayout>
</ScrollView>