<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView 
            android:text="@string/circle1"
            android:textSize="24sp"
            android:textColor="#15552c"
            android:layout_marginRight="8dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView 
            android:text="@string/step1_title"
            android:textSize="18sp"
            android:textColor="#15552c"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    
    <ListView
        android:id="@+id/list"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
	        android:id="@+id/refresh"
	        android:text="@string/Refresh"
	        android:layout_weight="0.5"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        />
        <Button
	        android:id="@+id/create"
	        android:text="@string/Create"
	        android:layout_weight="0.5"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/update"
            android:text="@string/Update"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
        <Button
            android:id="@+id/delete"
            android:text="@string/Delete"
            android:layout_weight="0.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    
    <ImageView 
        android:src="@drawable/logo"
        android:contentDescription="@null"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    
</LinearLayout>
