<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="vertical" >    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <TextView 
            android:text="@string/circle3"
            android:textSize="24sp"
            android:textColor="#15552c"
            android:layout_marginRight="8dp"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <TextView 
            android:text="@string/step3_title"
            android:textSize="18sp"
            android:textColor="#15552c"
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    
    <Button
        android:id="@+id/custom_method_1"
        android:text="@string/custom_method_1"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/custom_method_1_response"
        android:text=""
        android:textSize="18sp"
        android:textColor="#15552c"
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <Button
        android:id="@+id/custom_method_2"
        android:text="@string/custom_method_2"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
    <TextView
        android:id="@+id/custom_method_2_response"
        android:text=""
        android:textSize="18sp"
        android:textColor="#15552c"
        android:layout_gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />    
    <ImageView 
        android:src="@drawable/logo"
        android:contentDescription="@null"
        android:layout_gravity="right"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</LinearLayout>
</ScrollView>